--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,7 +74,8 @@
       "Category":"Category",
       "UploadImage":"Upload Image",
       "Q1":"Do you want to {{value}} product : {{productName}} to Show on Mobile ? ",
-      "Q2":"Do you want to {{value}} product : {{productName}} to Show on Web ? "
+      "Q2":"Do you want to {{value}} product : {{productName}} to Show on Web ? ",
+      "Search":"Search by product name"
     },
     "Holder": {
       "EnterProductName":"Enter product name",
