--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -126,6 +126,16 @@
       "EnterPhone":"Enter phone",
       "EnterEmail":"Enter email"
     }
+  },
+  "UserAuthentication":{
+    "Label": {
+      "UserID":"User ID",
+      "UserName":"User Name",
+      "Password":"Password",
+      "ConfirmPassword":"Confirm Password",
+      "Role":"Role",
+      "Part":"Part"
+    }
   }
 
 }
