--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -48,7 +48,8 @@
       "Vendor":"Vendor",
       "Product":"Product",
       "UserManagement":"User Management",
-      "User":"User"
+      "User":"User",
+      "UserInformation":"User Information"
     }
   },
   "Login": {
